# cinefluent

Cinefluent/Cinefluent/: CinefluentApp.swift  ContentView.swift
Cinefluent/Cinefluent.xcodeproj/: project.pbxproj
Cinefluent/Cinefluent.xcodeproj/project.xcworkspace/xcuserdata/osegonte.xcuserdatad/: UserInterfaceState.xcuserstate
Cinefluent/CinefluentTests/: CinefluentTests.swift
Cinefluent/CinefluentUITests/: CinefluentUITests.swift  CinefluentUITestsLaunchTests.swift
backend/: .env  .env.example  .pre-commit-config.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: lessons.py  movies.py  segments.py  users.py
backend/app/core/: auth.py  config.py
backend/app/db/: crud.py  database.py  init_db.py  models.py
backend/app/schemas/: lessons.py  movies.py  segments.py  users.py
backend/app/services/: alignment.py  deepseek.py  lesson_generator.py  opensubtitles.py  segmentation.py  subtitle_parser.py
backend/scripts/: process_and_store.py  verify_system.py
frontend/ios/Cinefluent/Cinefluent/: CinefluentApp.swift
frontend/ios/Cinefluent/Cinefluent.xcodeproj/: project.pbxproj
frontend/ios/Cinefluent/Cinefluent/App/: AppCoordinator.swift  AppCoordinatorView.swift
frontend/ios/Cinefluent/Cinefluent/Authentication/: AuthenticationFlow.swift  LoginView.swift  RegisterView.swift  SplashView.swift
frontend/ios/Cinefluent/Cinefluent/Main/: DashboardView.swift  (+1 more)
frontend/ios/Cinefluent/CinefluentTests/: CinefluentTests.swift
frontend/ios/Cinefluent/CinefluentUITests/: CinefluentUITests.swift  CinefluentUITestsLaunchTests.swift
(+22 files in other folders)
